# PEPTIDE-SEQUENCE-EMBEDDING-AND-CLUSTERING-VISUALIZATION

./: .readthedocs.yaml  README.md  SCIPY_PROJECT.ipynb  Test_ProtY.fasta  pyproject.toml  requirements.txt  setup.py
ProtY/: __init__.py  worky_worky.py
source/: conf.py  index.rst  modules.rst
