[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# !TODO: Change these settings
name = "ProtY"
version = "1.0"
authors = [
  { name="Csapó Bence"},
  { name="Galló Dominik"},
  { name="Uhlár Brigitta"}
]
maintainers = [
  { name="Csapó Bence, Galló Dominik, Uhlár Brigitta", email = "uhlarbrigi@gmail.com"},
]
description = "The project is about using a pretrained protein transformer architecture to create embeddings of various proteins, and then performing nonlinear dimensionality reduction on those embeddings to see which kinds of similarities in protein function/structure we can restore"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# Get dependencies dynamically from requirements.txt
dependencies = {file = ["requirements.txt"]}

[project.urls]
# !TODO: Change these settings
Homepage = "http://your-git.com"
Documentation = "http://your-readthedocs.com"
Repository = "https://github.com/uhlarbrigi/PEPTIDE-SEQUENCE-EMBEDDING-AND-CLUSTERING-VISUALIZATION.git"
Issues = "http://your-git.com/issues"

[tool.setuptools]
# Name of the package directory
packages = ["example_package"]